--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MangaMango</title>
 	<link rel="stylesheet" type="text/css" href="mmstyle.css">
-	<script type="text/javascript" src="mmscript.js"></script>
+	<script type="text/javascript" src="vyscript.js"></script>
 </head>
 <body>
 	<div class="parent header" id="header">
