--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MangaMango</title>
-	<link rel="stylesheet" type="text/css" href="mmstyle.css">
+	<link rel="stylesheet" type="text/css" href="vystyle.css">
 	<script type="text/javascript" src="vyscript.js"></script>
 </head>
 <body>
