--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MangaMango</title>
+	<title>VaniYami</title>
 	<link rel="stylesheet" type="text/css" href="vystyle.css">
 	<script type="text/javascript" src="vyscript.js"></script>
 </head>
