--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 	<div class="parent header" id="header">
 		<button class="openbtn" onclick="openNav()" style="width: 50px; height: 50px;">
-			<img style="width: 30px;height: 30px;" src="images/menu.png">
+			<img style="width: 30px;height: 30px;" src="images/Osu!_Logo_2016.svg">
 		</button>
 		<a href="facebook.com">
-			<img class="logo" style="width: 100px;" src="images/mangamango.png">
+			<img class="logo" style="width: 100px;" src="images/">
 		</a>
 	</div>
 	
@@ -24,10 +24,10 @@
 		</button>
 		<button style="color: white; " class="closebtn" onclick="closeNav()">
 			<div style="
-				background-color: #ffa50b;
+				background-color: #a83e67;
 				width: 3px;
 				height: 50px;
-				color: #ffa50b;
+				color: #a83e67;
 			"></div>
 		</button>
 		<a href="#">Updates</a>
@@ -41,7 +41,12 @@
 	</div>
 
 	<div class="parent" id="container">
-		<img src="images/.jpg">
+		<div class="main">
+			<div class="submain" style="height: 30px;"><h1>Player Info</h1></div>
+			<div class="submain" style="height: 50px;
+										background-color: #121212;"><h1>Gay Porn</h1></div>
+
+		</div>
 	</div>
 </body>
 </html>
